# project-layout

./: .gitignore  environment.yml
pyapi/: README.rst  pyproject.toml
pybend/: README.rst  makefile  makefile.conda_env  makefile.help  makefile.include  pyproject.toml
pybend/api/: README.rst
pybend/cli/: README.rst
pybend/common_lib/: common_lib_sub.py
pybend/data_coll/: data_coll_sub.py
